# codebase-graph

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
plugins/opencode/: README.md  index.ts  package.json  tsconfig.json
src/: __init__.py  cli.py
src/core/: __init__.py  graph.py  manifest.py  parser.py  watcher.py  writer.py
tests/: test_cli.py  test_graph.py  test_integration.py  test_manifest.py  test_parser.py  test_watcher.py  test_writer.py
tests/bench/: PLAN.md  generate_fixtures.py  harness.py  judge.py  metrics.py  promptfoo.yaml  repos.py  run_eval.py  tasks.py
tests/bench/fixtures/: express.codebase.md  fastapi.codebase.md  flask.codebase.md  solid.codebase.md
tests/bench/prompts/: baseline.md  optimized_mipro.md
tests/bench/results/: optimized_mipro_20260216T233723.json  summary_20260216T233723.json  summary_20260216T235154.json  summary_20260216T235251.json
tests/fixtures/: sample.py  sample.ts
tests/fixtures/py_project/: pyproject.toml
tests/fixtures/py_project/src/models/: user.py
tests/fixtures/py_project/src/services/: auth.py
tests/fixtures/ts_project/: package.json
tests/fixtures/ts_project/src/auth/: models.ts  service.ts
tests/fixtures/ts_project/src/orders/: types.ts
